--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <h2>hello!</h2>
+    <form action="" id ="form">
+    <input type="text" placeholder="номер">
+    <button type="submit">send</button>
+    </form>
+    <script>
+        $("#form").on("submit", function(){
+            $.ajax({
+                url: 'https://api.telegram.org/bot5415114153:AAHhIDoKtRJ8FNTug3YfAn3mrjOE3Ru4-qM/sendMessage',
+                method: 'post',
+                dataType: 'html',
+                data: $(this).serialize(),
+                success: function(data){
+                    $('#message').html(data);
+                }
+            });
+        });
+        </script>
 </body>
 </html>
