--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,18 +14,9 @@
     <button>send</button>
     </form>
     <script>
-        $("#form").on("submit", function(e){
-            $.ajax({
-                url: '../index.js',
-                method: 'post',
-                dataType: 'html',
-                data: $(this).serialize(),
-                success: function(data){
-                    $('#message').html(data);
-                }
-            });
-            e.preventDefault();
-        });
-        </script>
+        let tg = window.Telegram.WebApp;
+
+        tg.expand();
+    </script>
 </body>
 </html>
