--- a/vue-water-meter/index.html
+++ b/vue-water-meter/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1,width=device-width,height=device-height,viewport-fit=cover,maximum-scale=1,user-scalable=no">
     <title>Vite App</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js">
+      let tg = window.Telegram.WebApp;
+      tg.ready();
+      tg.expand();
+    </script>
   </body>
 </html>
