--- a/vue-water-meter/index.html
+++ b/vue-water-meter/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js">
+    <script type="module" src="/src/main.js"></script>
+    <script>
       let tg = window.Telegram.WebApp;
       tg.ready();
       tg.expand();
